[package]
name = "sellacc"
version = "0.1.0"
authors = ["James Butterworth <jjbsports16@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = { version = "0.10.6", features = ["blocking", "cookies"] }
log = "0.4"
env_logger = "0.7"
scraper = "0.12.0"
